恢复ZAsyncProperties配置类